[gd_scene load_steps=14 format=2]

[ext_resource path="res://Menu_Control.gd" type="Script" id=1]
[ext_resource path="res://Map_Control.gd" type="Script" id=2]
[ext_resource path="res://Option_Control.gd" type="Script" id=3]
[ext_resource path="res://Control_Control.gd" type="Script" id=4]
[ext_resource path="res://Ship_Control.gd" type="Script" id=5]
[ext_resource path="res://icon.png" type="Texture" id=6]
[ext_resource path="res://Spatial.gd" type="Script" id=7]
[ext_resource path="res://ship1.obj" type="ArrayMesh" id=8]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.969834, 0.246746, 1.53336 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 4.13763, 0.001, 2.74139 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 3.55041, 0.001, 2.97512 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.001, 3.09988, 3.11289 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 0.001, 4.67819, 3.51777 )

[node name="Main" type="Node"]

[node name="Menu_Control" type="Control" parent="."]
editor/display_folded = true
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="Menu_Control"]
editor/display_folded = true
margin_right = 1024.0
margin_bottom = 600.0

[node name="Label_Titulo" type="Label" parent="Menu_Control/Panel"]
margin_left = 457.782
margin_top = 113.327
margin_right = 548.782
margin_bottom = 144.327
text = "Fucking Titulo
"

[node name="Button_Start" type="Button" parent="Menu_Control/Panel"]
margin_left = 432.715
margin_top = 365.767
margin_right = 559.715
margin_bottom = 419.767
text = "Start"

[node name="Button_Ships" type="Button" parent="Menu_Control/Panel"]
margin_left = 433.48
margin_top = 453.947
margin_right = 560.48
margin_bottom = 496.947
text = "Ships"

[node name="Button_Options" type="Button" parent="Menu_Control/Panel"]
margin_left = 915.0
margin_top = 34.0
margin_right = 986.0
margin_bottom = 75.0
text = "Options"

[node name="Map_Control" type="Control" parent="Menu_Control"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="Menu_Control/Map_Control"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="Label_Panel" type="Label" parent="Menu_Control/Map_Control/Panel"]
margin_left = 405.267
margin_top = 35.7588
margin_right = 550.267
margin_bottom = 59.7588
text = "Map"

[node name="Button_Level_1" type="Button" parent="Menu_Control/Map_Control/Panel"]
margin_left = 412.418
margin_top = 190.714
margin_right = 553.418
margin_bottom = 231.714
text = "Level !"

[node name="Button_Back" type="Button" parent="Menu_Control/Map_Control/Panel"]
margin_left = 153.207
margin_top = 511.397
margin_right = 253.207
margin_bottom = 550.397
text = "Back"

[node name="Option_Control" type="Control" parent="Menu_Control"]
editor/display_folded = true
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="Menu_Control/Option_Control"]
editor/display_folded = true
margin_left = -2.38391
margin_right = 1021.62
margin_bottom = 600.0

[node name="Label_Settings" type="Label" parent="Menu_Control/Option_Control/Panel"]
margin_right = 40.0
margin_bottom = 14.0
text = "Fucking Settings
"

[node name="Button_Sound" type="Button" parent="Menu_Control/Option_Control/Panel"]
editor/display_folded = true
margin_left = 249.938
margin_top = 179.161
margin_right = 404.938
margin_bottom = 242.161
text = "Sound"

[node name="Label_Sound" type="Label" parent="Menu_Control/Option_Control/Panel/Button_Sound"]
margin_left = 205.0
margin_right = 519.0
margin_bottom = 66.0
rect_pivot_offset = Vector2( -1302.55, 20.8392 )
text = "Sound"

[node name="Button_Music" type="Button" parent="Menu_Control/Option_Control/Panel"]
editor/display_folded = true
margin_left = 252.733
margin_top = 271.393
margin_right = 407.733
margin_bottom = 329.393
text = "Music"

[node name="Label_Music" type="Label" parent="Menu_Control/Option_Control/Panel/Button_Music"]
margin_left = 197.437
margin_top = -4.02704
margin_right = 511.437
margin_bottom = 61.973
rect_pivot_offset = Vector2( -1302.55, 20.8392 )
text = "Music"

[node name="Button_Vibration" type="Button" parent="Menu_Control/Option_Control/Panel"]
editor/display_folded = true
margin_left = 253.0
margin_top = 358.0
margin_right = 410.0
margin_bottom = 411.0
text = "Vibration"

[node name="Label_Vibration" type="Label" parent="Menu_Control/Option_Control/Panel/Button_Vibration"]
margin_left = 187.634
margin_top = -4.81287
margin_right = 501.634
margin_bottom = 61.1871
rect_pivot_offset = Vector2( -1302.55, 20.8392 )
text = "Vibration
"

[node name="Button_Apply" type="Button" parent="Menu_Control/Option_Control/Panel"]
margin_left = 262.553
margin_top = 472.152
margin_right = 379.553
margin_bottom = 537.152
text = "Apply"

[node name="Button_Cancel" type="Button" parent="Menu_Control/Option_Control/Panel"]
margin_left = 562.605
margin_top = 474.4
margin_right = 672.605
margin_bottom = 539.4
text = "Cancel"

[node name="Button_Controls" type="Button" parent="Menu_Control/Option_Control/Panel"]
margin_left = 389.079
margin_top = 71.5992
margin_right = 520.079
margin_bottom = 132.599
text = "Controls"

[node name="Control_Control" type="Control" parent="Menu_Control/Option_Control"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )

[node name="Panel" type="Panel" parent="Menu_Control/Option_Control/Control_Control"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="Button_Keyboard" type="Button" parent="Menu_Control/Option_Control/Control_Control/Panel"]
margin_left = 370.806
margin_top = 223.086
margin_right = 489.806
margin_bottom = 276.086
text = "Keyboard"

[node name="Button_Joystick" type="Button" parent="Menu_Control/Option_Control/Control_Control/Panel"]
margin_left = 367.791
margin_top = 315.034
margin_right = 546.791
margin_bottom = 370.034
text = "Joystick"

[node name="Button_Celular" type="Button" parent="Menu_Control/Option_Control/Control_Control/Panel"]
margin_left = 375.328
margin_top = 419.041
margin_right = 514.328
margin_bottom = 477.041
text = "Celular"

[node name="Button_Apply" type="Button" parent="Menu_Control/Option_Control/Control_Control/Panel"]
margin_left = 628.323
margin_top = 342.722
margin_right = 938.323
margin_bottom = 531.722
text = "Apply"

[node name="Button_Cancel" type="Button" parent="Menu_Control/Option_Control/Control_Control/Panel"]
margin_left = 11.3604
margin_top = 440.782
margin_right = 368.36
margin_bottom = 578.782
text = "Cancel"

[node name="Ship_Control" type="Control" parent="Menu_Control"]
editor/display_folded = true
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )

[node name="Panel" type="Panel" parent="Menu_Control/Ship_Control"]
margin_left = 1.36035
margin_right = 1025.36
margin_bottom = 600.0

[node name="TextureRect_Ship" type="TextureRect" parent="Menu_Control/Ship_Control/Panel"]
margin_left = 497.137
margin_top = 299.042
margin_right = 564.137
margin_bottom = 366.042
texture = ExtResource( 6 )

[node name="Label_Money" type="Label" parent="Menu_Control/Ship_Control/Panel"]
margin_left = 463.685
margin_top = 23.4415
margin_right = 568.685
margin_bottom = 87.4415
text = "Money"

[node name="Button_Next" type="Button" parent="Menu_Control/Ship_Control/Panel"]
margin_left = 607.947
margin_top = 287.272
margin_right = 704.947
margin_bottom = 374.272
text = "Next"

[node name="Button_Previous" type="Button" parent="Menu_Control/Ship_Control/Panel"]
margin_left = 366.0
margin_top = 289.0
margin_right = 458.0
margin_bottom = 368.0
text = "Previous"

[node name="Button_Back" type="Button" parent="Menu_Control/Ship_Control/Panel"]
margin_left = 55.7716
margin_top = 517.018
margin_right = 171.772
margin_bottom = 580.018
text = "Back"

[node name="Button_Buy" type="Button" parent="Menu_Control/Ship_Control/Panel"]
margin_left = 485.364
margin_top = 420.548
margin_right = 575.364
margin_bottom = 482.548
text = "Buy"

[node name="Button_Ship" type="Button" parent="Menu_Control/Ship_Control/Panel"]
margin_left = 351.324
margin_top = 125.126
margin_right = 446.324
margin_bottom = 169.126
rect_pivot_offset = Vector2( 68.6755, 19.2006 )
text = "Ship"

[node name="Button_Engine" type="Button" parent="Menu_Control/Ship_Control/Panel"]
margin_left = 465.477
margin_top = 122.802
margin_right = 583.477
margin_bottom = 168.802
text = "Engine"

[node name="Button_Shield" type="Button" parent="Menu_Control/Ship_Control/Panel"]
margin_left = 600.36
margin_top = 123.36
margin_right = 732.36
margin_bottom = 171.36
text = "Shield"

[node name="Spatial" type="Spatial" parent="."]
script = ExtResource( 7 )

[node name="Camera" type="Camera" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 2 )

[node name="ShipBody" type="KinematicBody" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -2 )

[node name="CanvasShip" type="MeshInstance" parent="Spatial/ShipBody"]
mesh = ExtResource( 8 )
material/0 = null

[node name="CollisionShip" type="CollisionShape" parent="Spatial/ShipBody"]
shape = SubResource( 1 )

[node name="AreaCamera" type="StaticBody" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -2 )

[node name="CollisionCameraDown" type="CollisionShape" parent="Spatial/AreaCamera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0 )
shape = SubResource( 2 )

[node name="CollisionCameraUp" type="CollisionShape" parent="Spatial/AreaCamera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00646901, 2, 0.0227389 )
shape = SubResource( 3 )

[node name="CollisionCameraLeft" type="CollisionShape" parent="Spatial/AreaCamera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 0 )
shape = SubResource( 4 )

[node name="CollisionCameraRight" type="CollisionShape" parent="Spatial/AreaCamera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 0 )
shape = SubResource( 5 )

[connection signal="pressed" from="Menu_Control/Panel/Button_Start" to="Menu_Control" method="_on_Button_Start_pressed"]
[connection signal="pressed" from="Menu_Control/Panel/Button_Ships" to="Menu_Control" method="_on_Button_Ships_pressed"]
[connection signal="pressed" from="Menu_Control/Panel/Button_Options" to="Menu_Control" method="_on_Button_Options_pressed"]
[connection signal="pressed" from="Menu_Control/Map_Control/Panel/Button_Level_1" to="Menu_Control" method="_on_Button_Level_1_pressed"]
[connection signal="pressed" from="Menu_Control/Map_Control/Panel/Button_Back" to="Menu_Control/Map_Control" method="_on_Button_Back_pressed"]
[connection signal="pressed" from="Menu_Control/Option_Control/Panel/Button_Sound" to="Menu_Control/Option_Control" method="_on_Button_Sound_pressed"]
[connection signal="pressed" from="Menu_Control/Option_Control/Panel/Button_Music" to="Menu_Control/Option_Control" method="_on_Button_Music_pressed"]
[connection signal="pressed" from="Menu_Control/Option_Control/Panel/Button_Vibration" to="Menu_Control/Option_Control" method="_on_Button_Vibration_pressed"]
[connection signal="pressed" from="Menu_Control/Option_Control/Panel/Button_Apply" to="Menu_Control/Option_Control" method="_on_Button_Apply_pressed"]
[connection signal="pressed" from="Menu_Control/Option_Control/Panel/Button_Cancel" to="Menu_Control/Option_Control" method="_on_Button_Cancel_pressed"]
[connection signal="pressed" from="Menu_Control/Option_Control/Panel/Button_Controls" to="Menu_Control/Option_Control" method="_on_Button_Controls_pressed"]
[connection signal="pressed" from="Menu_Control/Option_Control/Control_Control/Panel/Button_Keyboard" to="Menu_Control/Option_Control/Control_Control" method="_on_Button_Keyboard_pressed"]
[connection signal="pressed" from="Menu_Control/Option_Control/Control_Control/Panel/Button_Joystick" to="Menu_Control/Option_Control/Control_Control" method="_on_Button_Joystick_pressed"]
[connection signal="pressed" from="Menu_Control/Option_Control/Control_Control/Panel/Button_Celular" to="Menu_Control/Option_Control/Control_Control" method="_on_Button_Celular_pressed"]
[connection signal="pressed" from="Menu_Control/Option_Control/Control_Control/Panel/Button_Apply" to="Menu_Control/Option_Control/Control_Control" method="_on_Button_Apply_pressed"]
[connection signal="pressed" from="Menu_Control/Option_Control/Control_Control/Panel/Button_Cancel" to="Menu_Control/Option_Control/Control_Control" method="_on_Button_Cancel_pressed"]
[connection signal="pressed" from="Menu_Control/Ship_Control/Panel/Button_Next" to="Menu_Control/Ship_Control" method="_on_Button_Next_pressed"]
[connection signal="pressed" from="Menu_Control/Ship_Control/Panel/Button_Previous" to="Menu_Control/Ship_Control" method="_on_Button_Previous_pressed"]
[connection signal="pressed" from="Menu_Control/Ship_Control/Panel/Button_Back" to="Menu_Control/Ship_Control" method="_on_Button_Back_pressed"]
